lark-example-service/deploy/dev-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: lark-example-service-svc
  namespace: lark-ns
  labels:
    module: lark-example
    module_type: service
spec:
  type: ClusterIP
  ports:
    - port: 3001
  selector:
    app: lark-example-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lark-example-service
  namespace: lark-ns
  labels:
    module: lark-example
    module_type: service
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: lark-example-service
  template:
    metadata:
      labels:
        app: lark-example-service
    spec:
      containers:
        - name: lark-example-service
          image: 192.168.99.91:8080/lark/lark-example-service:latest
          args: ["--spring.profiles.active=dev"]
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 3001
            initialDelaySeconds: 180
            timeoutSeconds: 180
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 3001
            initialDelaySeconds: 180
            timeoutSeconds: 180
            periodSeconds: 60
      restartPolicy: Always
      imagePullSecrets:
        - name: harbor-registry-secret
