lark-example-service/deploy/dev-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lark-example-service-ingress
  namespace: lark-ns
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: lark-ns-regex-stripprefix-middleware@kubernetescrd
spec:
  rules:
    - host: service.foo.com
      http:
        paths:
          - path: /lark-example-service
            backend:
              serviceName: lark-example-service-svc
              servicePort: 3001
